<resources>
    <string name="app_name">Bangladesh Railway</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bdrail">Bangladesh Railway</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="image_view_of_bangladesh_railway_vector">Image view of Bangladesh Railway Vector</string>
    <string name="bangladesh_railway">Bangladesh Railway</string>
    <string name="email_log">Email</string>
    <string name="pass_log">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="todo">TODO</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="ticket_fare">Ticket Fare</string>
    <string name="train_routes">Train Routes</string>
    <string name="coach_view">Coach View</string>
    <string name="train_list">Train List</string>
    <string name="station_schedule">Station Schedule</string>
    <string name="train_time">Train Time</string>
    <string name="refund_calculate">Refund Calculate</string>
    <string name="track">Track</string>
    <string name="from">From</string>
    <string name="To">To</string>
    <string name="date">Date</string>
    <string name="find_train">Find Train</string>
    <string name="name">Name</string>
    <string name="nid">NID</string>
    <string name="phone">Phone</string>
    <string name="sign_up">Sign up</string>
    <string name="user_information">User Information</string>
    <string name="edit_information">Edit Information</string>
    <string name="forget_password">Forget Password</string>
    <string name="drutojan_express">DrutoJan Express</string>
    <string name="departure">Departure</string>
    <string name="arraival">Arraival</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_32">32</string>
    <string name="_33">33</string>
    <string name="_34">34</string>
    <string name="_35">35</string>
    <string name="_36">36</string>
    <string name="_37">37</string>
    <string name="_38">38</string>
    <string name="_39">39</string>
    <string name="_40">40</string>
    <string name="_41">41</string>
    <string name="_42">42</string>
    <string name="_43">43</string>
    <string name="_44">44</string>
    <string name="_45">45</string>
    <string name="_46">46</string>
    <string name="_47">47</string>
    <string name="_48">48</string>
    <string name="_49">49</string>
    <string name="_50">50</string>
    <string name="_51">51</string>
    <string name="_52">52</string>
    <string name="_53">53</string>
    <string name="_54">54</string>
    <string name="_55">55</string>
    <string name="_56">56</string>
    <string name="_57">57</string>
    <string name="_58">58</string>
    <string name="_59">59</string>
    <string name="_60">60</string>
    <string name="_61">61</string>
    <string name="_62">62</string>
    <string name="_63">63</string>
    <string name="_64">64</string>
    <string name="_65">65</string>
    <string name="_66">66</string>
    <string name="_67">67</string>
    <string name="_68">68</string>
    <string name="_69">69</string>
    <string name="_70">70</string>
    <string name="_71">71</string>
    <string name="_72">72</string>
    <string name="_73">73</string>
    <string name="_74">74</string>
    <string name="_75">75</string>
    <string name="_76">76</string>
    <string name="_77">77</string>
    <string name="_78">78</string>
    <string name="_79">79</string>
    <string name="_80">80</string>
    <string name="_81">81</string>
    <string name="_82">82</string>
    <string name="_83">83</string>
    <string name="_84">84</string>
    <string name="_85">85</string>
    <string name="_86">86</string>
    <string name="_87">87</string>
    <string name="_88">88</string>
    <string name="_89">89</string>
    <string name="_90">90</string>
    <string name="_91">91</string>
    <string name="_92">92</string>
    <string name="dhaka">Dhaka</string>
    <string name="ekota_express_705">Ekota Express (705)</string>
    <string name="dinajpur">Dinajpur</string>
    <string name="_11_nov_20_20">11 Nov,20.20</string>
    <string name="continuebtn">Continue</string>
    <string name="select_coach">Select Coach</string>
    <string name="ka">KA</string>
    <string name="kha">KHA</string>
    <string name="ga">GA</string>
    <string name="gha">GHA</string>
    <string name="uma">UMA</string>
    <string name="cha">CHA</string>
    <string name="scha">SCHA</string>
    <string name="ja">JA</string>
    <string name="jha">JHA</string>
    <string name="neo">NEO</string>
    <string name="ta">TA</string>
    <string name="tha">THA</string>
    <string name="description">Your request to book e-ticket for your journey in Bangladesh Railway was successful. Your ticket was booked in your originating station (the station you mentioned as</string>
    <string name="heading">This Ticket will be valid on production of Photo Identity Card of the Passenger.</string>
    <string name="printinfo">(*) If you purchased e-ticket for your own travel, print copy of email is sufficient to travel. You don’t need to print out any hard copy of ticket from station. But please make sure to bring along valid photo identity. .</string>
    <string-array name="class_spinner">
        <item>Select Class</item>
        <item>AC_B</item>
        <item>AC_S</item>
        <item>SNIGDHA</item>
        <item>F_BEARTH</item>
        <item>F_SEAT</item>
        <item>F_CHAIR</item>
        <item>S_CHAIR</item>
        <item>SHOVON</item>
    </string-array>

    <string-array name="person_count">
        <item>Person</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>