<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView

        android:id="@+id/register"
        android:layout_width="228dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_register"
        android:contentDescription="@string/todo" />

    <EditText
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:id="@+id/name"
        android:background="@drawable/back"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/register"
        android:hint="@string/name"
        android:layout_margin="5dp"
        android:ems="15"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:autofillHints="Name" />
    <EditText
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:id="@+id/nid"
        android:background="@drawable/back"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/name"
        android:hint="@string/nid"
        android:layout_margin="5dp"
        android:ems="15"
        android:layout_centerHorizontal="true"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry,TextFields"
        android:id="@+id/phone_number"
        android:background="@drawable/back"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/nid"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:ems="15"
        android:hint="@string/phone"
        android:inputType="number"
        android:autofillHints="" />
    <EditText
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:id="@+id/email"
        android:background="@drawable/back"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/phone_number"
        android:hint="@string/email"
        android:layout_margin="5dp"
        android:ems="15"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:autofillHints="" />


    <EditText
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:id="@+id/password_res"
        android:background="@drawable/back"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/email"
        android:hint="@string/password"
        android:layout_margin="5dp"
        android:ems="15"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_res"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/sign_up" />
</RelativeLayout>