<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/bd_railway"
        android:layout_width="275dp"
        android:layout_height="146dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/train"
        android:contentDescription="@string/image_view_of_bangladesh_railway_vector" />

    <TextView
        android:layout_margin="10dp"
        android:id="@+id/bd_rail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bangladesh_railway"
        android:layout_below="@id/bd_railway"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"

        />


    <EditText
        android:background="@drawable/back"
        android:id="@+id/email_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingStart="10dp"
        android:layout_below="@id/bd_rail_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="abc@gmail.com"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:ems="15"
        android:hint="@string/email_log"
        android:inputType="textEmailAddress"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:paddingStart="10dp"
        android:id="@+id/pass_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/email_login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="ably123"
        android:background="@drawable/back"
        android:drawableStart="@drawable/ic_pass"
        android:drawablePadding="10dp"
        android:ems="15"
        android:hint="@string/pass_log"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/sign_in" />
</RelativeLayout>