<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity2">

    <!-- TODO: Update blank fragment layout -->
    <ImageView

        android:id="@+id/user_info_section"
        android:layout_width="228dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_register"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_information"
        android:textSize="20sp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/name_show"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/back"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/user_info_section"
        android:layout_marginStart="65dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:paddingVertical="15dp"
        android:text=""
        app:drawableLeftCompat="@drawable/ic_user"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:id="@+id/email_show"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/back"
        android:layout_below="@id/name_show"
        android:layout_marginStart="65dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="15dp"
        android:drawablePadding="10dp"
        android:text=""
        app:drawableLeftCompat="@drawable/ic_email_show" />

    <TextView
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:id="@+id/nid_show"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/back"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/email_show"
        android:layout_marginStart="65dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:paddingVertical="15dp"
        android:text=""
        app:drawableLeftCompat="@drawable/ic_nid" />

    <TextView
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:id="@+id/phone_show"
        android:layout_marginTop="20dp"
        android:paddingVertical="17dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/back"
        android:text=""
        android:layout_below="@id/nid_show"
        android:drawablePadding="10dp"
        android:layout_marginStart="65dp"
        app:drawableLeftCompat="@drawable/ic_phone_show" />
        <Button
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_show"
            android:layout_centerHorizontal="true"
            android:text="@string/edit_information"
            />

</RelativeLayout>